--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ pydantic-core==2.33.0
 python-jose==3.4.0
 python-multipart==0.0.20
 rsa==4.9
+requests
 six==1.17.0
 sniffio==1.3.1
 sqlalchemy==2.0.40
